option(JANICE_WITH_OPENCV_IO "Use the default I/O routines built with OpenCV" OFF)
if (${JANICE_WITH_OPENCV_IO})
  add_subdirectory(opencv_io)
  set(JANICE_IO_IMPLEMENTATION ${JANICE_IO_IMPLEMENTATION} janice_io_opencv)
endif()

option(JANICE_WITH_MEMORY_IO "Use the default I/O routines for in-memory operations" OFF)
if (${JANICE_WITH_MEMORY_IO})
  add_subdirectory(memory_io)
  set(JANICE_IO_IMPLEMENTATION ${JANICE_IO_IMPLEMENTATION} janice_io_memory)
endif()

option(JANICE_WITH_DLIB_FR "Use the DLIB FR wrapper" OFF)
if (${JANICE_WITH_DLIB_FR})
  add_subdirectory(dlib)
  set(JANICE_IMPLEMENTATION janice_dlib)
endif()

if (${JANICE_WITH_OPENCV_IO} OR ${JANICE_WITH_MEMORY_IO} OR ${JANICE_WITH_DLIB_FR})
  set(CMAKE_CXX_STANDARD 11)
endif()
